fix overflow problem

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -302,7 +302,6 @@ h2 {
 #ruby-tag {
     margin-left: 18vw;
     padding-left: 15px;
-    box-shadow: 1vh 0.7vh $near-black;
 }
 #mean-tag {
     /*margin-left: 18vw;*/
